# bsh

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  benchmark.py  benchmark.sh  build.sh  import_zsh.py  install.sh
.github/workflows/: release.yml
benchmark/: benchmark.py  benchmark.sh
scripts/: bsh_init.zsh
src/: client.cpp  daemon.cpp  db.cpp  db.hpp  git_utils.cpp  git_utils.hpp  ipc.hpp  main.cpp  tui.cpp
